# k8psh

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  k8psh_example.conf
.github/workflows/: build.yaml  codeql-analysis.yaml
github/workflows/: build.yaml
src/: Configuration.cxx  Configuration.hxx  Main.cxx  Process.cxx  Process.hxx  Socket.cxx  Socket.hxx  Utilities.cxx  Utilities.hxx  k8psh.cxx
test/: ConfigurationTest.cxx  SocketTest.cxx  Test.hxx  UtilitiesTest.cxx  k8pshTest.cxx
test/config/: k8s.conf
test/k8s/: test.yaml
